--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
         "axios": "^1.5.1",
         "bootstrap": "^4.6.2",
         "prop-types": "^15.8.1",
+        "proptypes": "^1.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.15.0",
