--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,17 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.14.18",
-        "@mui/material": "^5.14.17",
+        "@mui/material": "^5.15.12",
         "axios": "^1.5.1",
         "bootstrap": "^4.6.2",
         "prop-types": "^15.8.1",
         "proptypes": "^1.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^5.0.1",
         "react-router-dom": "^6.15.0",
         "sass": "^1.66.1"
     },
