--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,14 @@
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.14.18",
         "@mui/material": "^5.15.12",
+        "@mui/x-charts": "^6.19.5",
         "axios": "^1.5.1",
         "bootstrap": "^4.6.2",
+        "chart.js": "^4.4.2",
         "prop-types": "^15.8.1",
         "proptypes": "^1.1.0",
         "react": "^18.2.0",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.0.1",
         "react-router-dom": "^6.15.0",
