--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,41 @@
 annotated-types==0.5.0
 anyio==3.7.1
+bson==0.5.10
 certifi==2023.7.22
+charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.4.2
 fastapi==0.103.1
+filelock==3.13.1
+fsspec==2024.3.1
 h11==0.14.0
+huggingface-hub==0.21.4
 idna==3.4
+joblib==1.3.2
 numpy==1.26.1
 opencv-python==4.8.1.78
 packaging==23.2
+pandas==2.2.1
 Pillow==10.0.1
 pydantic==2.4.1
 pydantic_core==2.10.1
 pymongo==4.6.0
 pytesseract==0.3.10
+python-dateutil==2.9.0.post0
 python-multipart==0.0.6
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+six==1.16.0
+skops==0.9.0
 sniffio==1.3.0
 starlette==0.27.0
+tabulate==0.9.0
+threadpoolctl==3.4.0
+tqdm==4.66.2
 typing_extensions==4.8.0
+tzdata==2024.1
+urllib3==2.2.1
 uvicorn==0.23.2
